--- a/customer-service.properties
+++ b/customer-service.properties
@@ -1,2 +1,7 @@
 server.port=${PORT:8001}
 spring.cloud.stream.bindings.input.destination=customer
+
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:32774
+spring.datasource.username=root
+spring.datasource.password=test
