--- a/customer-service.properties
+++ b/customer-service.properties
@@ -5,3 +5,6 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:32774
 spring.datasource.username=root
 spring.datasource.password=test
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
